[tool.poetry]
name = "generic-jupyter-env-seaborn"
version = "0.1.0"
description = ""
authors = ["Shariff Faleel <shariff.mfa@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "generic_jupyter_env_seaborn"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
seaborn = "^0.13.0"
pandas = "^2.1.1"
ipykernel = "^6.25.2"
tqdm = "^4.66.1"
dill = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
